@@ -1,10 +1,10 @@
-/* ===========================================================
- * JFreeChart : a free chart library for the Java(tm) platform
- * ===========================================================
+/* ======================================================
+ * JFreeChart : a chart library for the Java(tm) platform
+ * ======================================================
  *
- * (C) Copyright 2000-2020, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-present, by David Gilbert and Contributors.
  *
- * Project Info:  http://www.jfree.org/jfreechart/index.html
+ * Project Info:  https://www.jfree.org/jfreechart/index.html
  *
  * This library is free software; you can redistribute it and/or modify it
  * under the terms of the GNU Lesser General Public License as published by
@@ -21,29 +21,22 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301,
  * USA.
  *
- * [Oracle and Java are registered trademarks of Oracle and/or its affiliates. 
+ * [Oracle and Java are registered trademarks of Oracle and/or its affiliates.
  * Other names may be trademarks of their respective owners.]
  *
  * ------------------------
  * ImageEncoderFactory.java
  * ------------------------
- * (C) Copyright 2004-2012, by Richard Atkinson and Contributors.
+ * (C) Copyright 2004-present, by Richard Atkinson and Contributors.
  *
  * Original Author:  Richard Atkinson;
- * Contributor(s):   David Gilbert (for Object Refinery Limited);
- *
- * Changes
- * -------
- * 01-Aug-2004 : Initial version (RA);
- * 01-Nov-2005 : Now using ImageIO for JPEG encoding, so we no longer have a
- *               dependency on com.sun.* which isn't available on all
- *               implementations (DG);
- * 02-Feb-2007 : Removed author tags all over JFreeChart sources (DG);
- * 06-Jul-2008 : Remove encoder only used in JDK 1.3 (DG);
+ * Contributor(s):   David Gilbert;
  * 
  */
 
 package org.jfree.chart.encoders;
+
+import org.jfree.chart.util.Args;
 
 import java.util.HashMap;
 import java.util.Map;
@@ -55,10 +48,14 @@ import java.util.Map;
 public class ImageEncoderFactory {
 
     /** Storage for the encoders. */
-    private static Map encoders = null;
+    private static Map<String, String> encoders = null;
 
     static {
         init();
+    }
+
+    private ImageEncoderFactory() {
+        // no requirement to instantiate
     }
 
     /**
@@ -66,7 +63,7 @@ public class ImageEncoderFactory {
      * SunPNGEncoderAdapter class is available).
      */
     private static void init() {
-        encoders = new HashMap();
+        encoders = new HashMap<>();
         encoders.put("jpeg", "org.jfree.chart.encoders.SunJPEGEncoderAdapter");
         encoders.put("png", "org.jfree.chart.encoders.SunPNGEncoderAdapter");
     }
@@ -79,6 +76,8 @@ public class ImageEncoderFactory {
      */
     public static void setImageEncoder(String format,
                                        String imageEncoderClassName) {
+        Args.nullNotPermitted(format, "format");
+        Args.nullNotPermitted(imageEncoderClassName, "imageEncoderClassName");
         encoders.put(format, imageEncoderClassName);
     }
 
@@ -90,18 +89,14 @@ public class ImageEncoderFactory {
      * @return The ImageEncoder or {@code null} if none available.
      */
     public static ImageEncoder newInstance(String format) {
-        ImageEncoder imageEncoder = null;
-        String className = (String) encoders.get(format);
-        if (className == null) {
-            throw new IllegalArgumentException("Unsupported image format - "
-                    + format);
-        }
+        ImageEncoder imageEncoder;
+        String className = encoders.get(format);
         try {
-            Class imageEncoderClass = Class.forName(className);
-            imageEncoder = (ImageEncoder) imageEncoderClass.newInstance();
+            Class<?> imageEncoderClass = Class.forName(className);
+            imageEncoder = (ImageEncoder) imageEncoderClass.getDeclaredConstructor().newInstance();
         }
         catch (Exception e) {
-            throw new IllegalArgumentException(e.toString());
+            throw new IllegalArgumentException(e.getMessage(), e);
         }
         return imageEncoder;
     }
